<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/LoginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/iconapp"
            tools:ignore="ContentDescription, ImageContrastCheck" />

        <TextView
            android:id="@+id/WelcomeText"
            style="@style/txtPoppinsbold16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/welcome_to_lafyuu"
            android:layout_gravity="center"
            tools:ignore="TextSizeCheck" />

        <TextView
            style="@style/txtPoppinsregular12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in_to_continue"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailForm"
            style="@style/txtPoppinsregular12_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:drawableStart="@drawable/padding_img_arrowdown"
            android:hint="@string/EmailForm"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@android:color/black"
            tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordForm"
            style="@style/txtPoppinsregular12_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:drawableStart="@drawable/padding_img_location"
            android:hint="@string/PasswordForm"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BTNSignIn"
            style="@style/btnSolidRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:text="@string/sign_in"
            tools:ignore="TextSizeCheck" />

        <LinearLayout android:id="@+id/linearOrline"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent" android:orientation="horizontal">

            <View android:background="@color/primary_blue"
                android:id="@+id/lineRightline"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.46" android:layout_width="0dp"/>

            <TextView
                android:id="@+id/txtOR"
                style="@style/txtPoppinsbold14_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_weight="0.07"
                android:ellipsize="end"
                android:letterSpacing="0.0"
                android:singleLine="true"
                tools:ignore="TextSizeCheck"
                tools:text="@string/or_label"
                android:textColor="@color/black"/>

            <View android:background="@color/primary_blue"
                android:id="@+id/lineLeftline"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.47" android:layout_width="0dp"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BTNSignInGoogle"
            style="@style/NewCombinedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:drawableStart="@drawable/padding_google"
            android:text="@string/google_sign_in"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BTNSignInFacebook"
            style="@style/NewCombinedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:drawableStart="@drawable/padding_img_facebook"
            android:text="@string/facebook_sign_in"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/txtForgotPassword"
            style="@style/txtPoppinsbold12_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:clickable="true"
            android:text="@string/forgot_password"
            tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/txtConfirmation"
                style="@style/txtPoppinsregular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginBottom="@dimen/_20pxv"
                android:ellipsize="end"
                android:text="@string/dont_have"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/Register"
                style="@style/txtPoppinsbold12_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/register"
                tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
